--- a/.env
+++ b/.env
@@ -1,9 +1,2 @@
-GEMINI_API_KEY=AIzaSyAstWNeBV1Hg5IFpvrY8zl_Qw8o1vSp_ks
-#AIzaSyCAkq8zlrzoSM-HUnGP0fURsPSA6txOifE
-#AIzaSyDJ5I3uBYNphflsz43bR7O1Stvzq4CWRt4
-#AIzaSyAstWNeBV1Hg5IFpvrY8zl_Qw8o1vSp_ks
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=VML22CS015
-DB_NAME=faculty_schedule
+store your apis &
+database credentials here
